--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 python-telegram-bot==20.3
-pandas
-numpy
-pandas_ta
-requests
+pandas==2.3.3
+numpy==1.26.5
+pandas_ta==0.3.24b0
+scipy==1.11.2
+matplotlib==3.8.1
+requests==2.32.1
 python-dotenv
 SQLAlchemy
 apscheduler
-matplotlib
-scipy
