--- a/.github/workflows/run-backtester.yml
+++ b/.github/workflows/run-backtester.yml
@@ -1,10 +1,9 @@
 name: Run backtester and commit best_params
 
-# Schedule daily at 06:00 UTC, et run manuel possible
 on:
   schedule:
-    - cron: '0 6 * * *'
-  workflow_dispatch:
+    - cron: '0 6 * * *'   # run daily at 06:00 UTC
+  workflow_dispatch:      # permet run manuel
 
 jobs:
   backtest:
@@ -14,8 +13,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          # persist-credentials: false permet d’utiliser le PAT pour le push
-          persist-credentials: false
+          persist-credentials: true
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -40,9 +38,12 @@ jobs:
           if [ -f best_params.json ]; then
             git config user.name "github-actions[bot]"
             git config user.email "github-actions[bot]@users.noreply.github.com"
+
+            # Configure git remote to use the PAT for authentication
+            git remote set-url origin https://${{ secrets.PAT_GITHUB }}@github.com/${{ github.repository }}.git
+
             git add best_params.json
             git commit -m "Auto: update best_params.json (backtester run)" || echo "no changes to commit"
-            git push https://${{ secrets.PAT_GITHUB }}@github.com/${{ github.repository }}.git HEAD:main
+            git push origin HEAD:main
           else
             echo "No best_params.json generated"
-          fi
