--- a/.github/workflows/run-backtester.yml
+++ b/.github/workflows/run-backtester.yml
@@ -12,14 +12,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          persist-credentials: false  # important pour utiliser le PAT
+          persist-credentials: false  # important pour utiliser PAT
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
 
-      - name: Install deps
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
@@ -32,7 +32,7 @@ jobs:
 
       - name: Commit best_params.json
         env:
-          GITHUB_TOKEN: ${{ secrets.PAT_GITHUB }}  # ton token personnel
+          GITHUB_TOKEN: ${{ secrets.PAT_GITHUB }}
         run: |
           if [ -f best_params.json ]; then
               git config user.name "github-actions[bot]"
